added go mod && swagger files
