# models/product.go
@@ -1,0 +1,197 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// Product product
+//
+// swagger:model product
+type Product struct {
+
+	// body html
+	BodyHTML string `json:"body_html,omitempty"`
+
+	// category
+	Category string `json:"category,omitempty"`
+
+	// id
+	// Read Only: true
+	ID int64 `json:"id,omitempty"`
+
+	// product code
+	// Required: true
+	// Min Length: 1
+	ProductCode *string `json:"product_code"`
+
+	// product type
+	ProductType string `json:"product_type,omitempty"`
+
+	// title
+	// Required: true
+	// Min Length: 1
+	Title *string `json:"title"`
+
+	// variants
+	// Required: true
+	Variants []*Variants `json:"variants"`
+
+	// vendor
+	Vendor string `json:"vendor,omitempty"`
+}
+
+// Validate validates this product
+func (m *Product) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateProductCode(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateTitle(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateVariants(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Product) validateProductCode(formats strfmt.Registry) error {
+
+	if err := validate.Required("product_code", "body", m.ProductCode); err != nil {
+		return err
+	}
+
+	if err := validate.MinLength("product_code", "body", *m.ProductCode, 1); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Product) validateTitle(formats strfmt.Registry) error {
+
+	if err := validate.Required("title", "body", m.Title); err != nil {
+		return err
+	}
+
+	if err := validate.MinLength("title", "body", *m.Title, 1); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Product) validateVariants(formats strfmt.Registry) error {
+
+	if err := validate.Required("variants", "body", m.Variants); err != nil {
+		return err
+	}
+
+	for i := 0; i < len(m.Variants); i++ {
+		if swag.IsZero(m.Variants[i]) { // not required
+			continue
+		}
+
+		if m.Variants[i] != nil {
+			if err := m.Variants[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("variants" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("variants" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// ContextValidate validate this product based on the context it is used
+func (m *Product) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateID(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.contextValidateVariants(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Product) contextValidateID(ctx context.Context, formats strfmt.Registry) error {
+
+	if err := validate.ReadOnly(ctx, "id", "body", int64(m.ID)); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Product) contextValidateVariants(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.Variants); i++ {
+
+		if m.Variants[i] != nil {
+
+			if swag.IsZero(m.Variants[i]) { // not required
+				return nil
+			}
+
+			if err := m.Variants[i].ContextValidate(ctx, formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("variants" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("variants" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Product) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Product) UnmarshalBinary(b []byte) error {
+	var res Product
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
